# challenge-aido_LF-template-ros2

./: .gitignore  Dockerfile
DELETE/agent_/: package.xml
DELETE/random_action_/launch/: random_action_node.launch.py
DELETE/random_action_/src/: random_action_node.py
DELETE/ros2agent/: setup.py
DELETE/ros2agent/install/: local_setup.sh  setup.sh
DELETE/ros2agent/install/ros2agent/share/ros2agent/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
DELETE/ros2agent/log/: latest_build
dev_ws/src/random_action/: package.xml  setup.cfg  setup.py
dev_ws/src/random_action/launch/: random_action.launch.py
dev_ws/src/random_action/random_action/: random_action.py
launchers/: run_and_start.sh  start_lane_following.sh  stop_lane_following.sh
submission_underlay_ws/src/duckietown_bridge/: package.xml  setup.cfg  setup.py
submission_underlay_ws/src/duckietown_bridge/duckietown_bridge/: duckietown_bridge.py
submission_underlay_ws/src/duckietown_msgs/: CMakeLists.txt  package.xml
submission_underlay_ws/src/duckietown_msgs/msg/: DiagnosticsCodeProfilingArray.msg  DiagnosticsRosLinkArray.msg  DiagnosticsRosParameterArray.msg  DiagnosticsRosProfiling.msg  DiagnosticsRosTopicArray.msg
